# AI_O11y_Custos

./: .gitignore  1.sh  README.md  build_git.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-databricks.yml  deploy-functions.yml  deploy-infra.yml
docs/: arquitetura.md  arquitetura.mmd
infra/: README_INFRA.md  cost_export.tf  databricks.tf  diagnostics.tf  function.tf  log_analytics.tf  main.tf  outputs.tf  providers.tf  resource_group.tf  storage.tf  variables.tf
jobs/: train_job.json
notebooks/: train_forecast.py
src/ai_o11y_custos/: pipeline.py
src/ai_o11y_custos/scoring_function/: __init__.py
